--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: minima
 plugins:
   - jekyll-feed
 
-titles_from_headings:
-  enabled:     true
-  strip_title: true
-  collections: true
+# titles_from_headings:
+#   enabled:     true
+#   strip_title: true
+#   collections: true
